changes in coupon API
